# villar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC-V2.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stats.yml
Casks/: villar.rb
docs/: mvp.md
e2e/: app.spec.ts
e2e/fixtures/: tauri-mock.js  test.ts
site/: index.html
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/AboutDialog/: AboutDialog.tsx
src/components/CardView/: CardView.tsx  FileMeta.tsx  ImagePreview.tsx  MermaidBlock.tsx  MermaidPreview.tsx  RawView.tsx  ReadingRuler.tsx  SectionContent.tsx  TldrCard.tsx  cardVisibility.ts
src/hooks/: openMarkdownFile.ts  useDragDrop.ts  useErrorLogger.ts  useFileWatcher.ts  useKeyboard.ts  useMarkdown.ts  useMenuActions.ts  useMetrics.ts  useOnboarding.ts  useResizable.ts  useRestoreSession.ts  useTheme.ts  useUpdateCheck.ts  useVscodeTheme.ts
src/i18n/: translations.ts  useTranslation.ts
src/plugins/: mermaid-linear.ts  remark-collapse.ts  remark-section.ts  remark-tldr.ts  textrank.ts
src/stores/: settingsSlice.ts  tabSlice.ts  useAppStore.ts
src/styles/: base.css  components.css  reading.css  theme-overrides.css
src/themes/: builtin.ts  fonts.ts
stats/: daily.jsonl
(+35 files in other folders)
